--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "colors":"*",
     "chai":">=1.3.0",
     "uglify-js":">=1.3.4",
-    "nodewatch": ">=0.3.0"
+    "nodewatch": ">=0.3.0",
+    "which": ">=1.0.5",
     }
   }
