--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     },
   "dependencies":{
     "underscore":">=1.4.2",
-    "async":">=0.1.22"
+    "async":">=0.1.22",
+    "coffee-script":">=1.4.0"
     },
   "devDependencies":{
-    "coffee-script":">=1.4.0",
     "mocha":">=1.7.0",
     "docco":">=0.4.0",
     "colors":"*",
     "chai":">=1.3.0",
     "uglify-js":">=1.3.4",
     "nodewatch": ">=0.3.0",
-    "which": ">=1.0.5",
+    "which": ">=1.0.5"
     }
   }
