--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
   "dependencies":{
     "underscore":">=1.4.2",
+    "underscore.string":">=2.3.1",
     "async":">=0.1.22",
     "coffee-script":">=1.4.0"
     },
